--- a/index.html
+++ b/index.html
@@ -528,7 +528,12 @@ aside {
   text-align:center;
   font-size:200%;
 }
-
+h1 .amp  {
+  font-size:200%;
+  display: inline-block;
+  margin-left: -30px;
+  margin-right: -20px;
+}
 h3 .amp {
   font-size: 100%;
 }
@@ -813,6 +818,10 @@ Font squirrel takes a font file and generates the entire package:</p>
 </section>
   </div>
   <div class="slide hidden" id="slide-22">
+    <section class="slide-content"><h1 id="questions-br-span-class-amp-span-answers">Questions <br> <span class="amp">&amp;</span> Answers</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-23">
     <section class="slide-content"><div class="author">
   <h1 class="name">Joaquín Windmüller</h1>
     <h3 class="twitter">
