--- a/index.html
+++ b/index.html
@@ -579,14 +579,38 @@ strong {
   }
 }
 @media (max-width: 600px) {
+  body {
+    padding-top: 40px;
+  }
   aside {
     float: none;
   }
   aside img {
     width:auto;
   }
-  .controls, .slide {
+  .slide {
     position:static;
+  }
+  .controls {
+    position: absolute;
+    top:0;
+    right:0;
+    text-align: right;
+    padding:10px 0 30px 0;
+    border-bottom: #ccc 1px solid;
+    height: 20px;
+  }
+  .controls .arrow {
+    float: none;
+    display: inline-block;
+    border-width:20px;
+    margin-right:20px;
+  }
+  .prev {
+    border-right-width:20px;
+  }
+  .controls .next {
+    margin-right: 0
   }
   .slide-content {
     height:auto;
