Adding missing word.
Fixing style for fancy &

--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@ aside {
 h1 .amp  {
   font-size:200%;
   display: inline-block;
-  margin-left: -30px;
-  margin-right: -20px;
+  margin-left: -0.3em;
+  margin-right: -0.2em;
 }
 h3 .amp {
   font-size: 100%;
@@ -740,7 +740,7 @@ Font squirrel takes a font file and generates the entire package:</p>
 <div class="icon">&#x23F8;</div>
 </div>
 
-<p><strong>Using <code>:before</code> rule:</strong></p>
+<p><strong>Using a <code>:before</code> rule:</strong></p>
 <pre><code>&lt;!-- This will show the icon before the text --&gt;
 &lt;div class=&quot;icon-before cube&quot;&gt;Cube&lt;/div&gt;</code></pre>
 <div class="example">
